[gd_scene load_steps=21 format=2]

[ext_resource path="res://asset/frames/lizard_f_idle_anim_f2.png" type="Texture" id=1]
[ext_resource path="res://asset/frames/lizard_f_idle_anim_f1.png" type="Texture" id=2]
[ext_resource path="res://asset/frames/lizard_f_idle_anim_f3.png" type="Texture" id=3]
[ext_resource path="res://src/actors/enemies/EnemyBase.tscn" type="PackedScene" id=4]
[ext_resource path="res://asset/frames/lizard_f_idle_anim_f0.png" type="Texture" id=5]
[ext_resource path="res://asset/frames/lizard_f_run_anim_f0.png" type="Texture" id=6]
[ext_resource path="res://asset/frames/lizard_f_run_anim_f2.png" type="Texture" id=7]
[ext_resource path="res://asset/frames/lizard_f_run_anim_f3.png" type="Texture" id=8]
[ext_resource path="res://asset/frames/lizard_f_run_anim_f1.png" type="Texture" id=9]
[ext_resource path="res://asset/SmallShadow.png" type="Texture" id=10]
[ext_resource path="res://asset/frames/weapon_red_magic_staff.png" type="Texture" id=11]
[ext_resource path="res://src/actors/enemies/lizard_girl/LizardGirl.gd" type="Script" id=12]

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

uniform bool white_out = false;
uniform bool frozen = false;

void fragment() {
	vec4 previous_color = texture(TEXTURE, UV);
	if (white_out) {
		COLOR = vec4(1.0, 1.0, 1.0, previous_color.a);
	}
	else if (frozen) {
		float red = previous_color.r * 0.5;
		float green = previous_color.g * 0.8;
		float blue = previous_color.b * 1.0;
		float alpha = previous_color.a * 1.0;
		COLOR = vec4(red, green, blue, alpha);
	}
	else {
		COLOR = previous_color;
	}
}"

[sub_resource type="ShaderMaterial" id=7]
resource_local_to_scene = true
shader = SubResource( 6 )
shader_param/white_out = false
shader_param/frozen = false

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "Move",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 2.66274
height = 6.65849

[sub_resource type="CircleShape2D" id=3]
radius = 9.67659

[sub_resource type="CircleShape2D" id=9]
radius = 13.3534

[sub_resource type="CircleShape2D" id=4]
radius = 8.38867

[sub_resource type="Animation" id=8]
resource_name = "Slash"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponOrigin/WeaponSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WeaponOrigin:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -30.0, 60.0 ]
}

[node name="LizardGirl" instance=ExtResource( 4 )]
script = ExtResource( 12 )
MAX_LIFE = 2
IDLE_CHANCE = 15
MOVE_CHANCE = 20
CAST_CHANCE = 65

[node name="Shadow" parent="." index="0"]
position = Vector2( -0.250343, 12.7676 )
scale = Vector2( 1.30041, 1 )
texture = ExtResource( 10 )

[node name="Sprite" parent="." index="1"]
material = SubResource( 7 )
frames = SubResource( 1 )
animation = "Move"
frame = 2

[node name="WeaponOrigin" type="Position2D" parent="." index="2"]
rotation = 1.0472

[node name="WeaponSprite" type="Sprite" parent="WeaponOrigin" index="0"]
visible = false
position = Vector2( 14, 6 )
rotation = 1.5708
scale = Vector2( 0.5, 0.25 )
texture = ExtResource( 11 )

[node name="DeathSprite" parent="." index="3"]
visible = false

[node name="Boundry" parent="." index="4"]
visible = false
position = Vector2( -0.368057, 11.2256 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( -0.36805, 4.9687 )
shape = SubResource( 3 )

[node name="CastCollision" type="CollisionShape2D" parent="HitBox" index="1"]
position = Vector2( 16, 6 )
shape = SubResource( 9 )
disabled = true

[node name="CollisionPolygon2D" parent="HurtBox" index="0"]
position = Vector2( 0.36805, 5.33675 )
shape = SubResource( 4 )

[node name="CastTimer" type="Timer" parent="." index="11"]
wait_time = 0.5
one_shot = true

[node name="CastParticles" parent="." index="14"]
position = Vector2( 21.0565, 5.72418 )
lifetime = 0.5

[node name="AnimationPlayer" parent="." index="15"]
anims/Slash = SubResource( 8 )
[connection signal="timeout" from="CastTimer" to="." method="_on_CastTimer_timeout"]
